[package]
name = "tremolo"
version = "0.0.0"
edition = "2021"
publish = true
authors = ["RogueOneEcho"]
description = "Client agnostic torrent synchronization"
repository = "https://github.com/RogueOneEcho/tremolo"
license = "AGPL-3.0-only"
include = [
    "src/**/*",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE.md",
    "README.md"
]

[dependencies]
colored = "^2.1"
log = { version = "^0.4", features = ["std"] }
rogue_logging = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "^1", features = ["full"] }
flat_db = "0.2.0-alpha.1"
deluge_api = "0.2.0"
clap = { version = "4.5.23", features = ["derive"] }
qbittorrent_api = "0.1.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
#restriction = { level = "warn", priority = -2 }

absolute_paths = "warn"
arithmetic_side_effects = "allow"
as_conversions = "warn"
cast_possible_truncation = "warn"
clone_on_ref_ptr = "allow"
enum_glob_use = "allow"
expect_used = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
get_first = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_return = "allow"
indexing_slicing = "warn"
integer_division = "warn"
just_underscores_and_digits = "allow"
match_same_arms = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
mod_module_files = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
new_without_default = "allow"
non_ascii_literal = "allow"
panic = "warn"
pattern_type_mismatch = "allow"
pub_use = "allow"
question_mark_used = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
str_to_string = "warn"
string_add = "allow"
tests_outside_test_module = "allow"
unneeded_wildcard_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_self = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "allow"
wildcard_imports = "allow"
wrong_self_convention = "allow"
# TODO COULD re-consider the following allows:
result_large_err = "allow"

# TODO SHOULD investigate solution to await_holding_lock
await_holding_lock = "allow"
